[parser]: finished the parser

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </label>  
     <textarea id="parseTemplate" name="parseTemplate"></textarea>
 
-    <button class="tfmBtn" onclick="highlightChanges()">Transform</button>
+    <button class="tfmBtn" onclick="main()">Transform</button>
     <label for="resultTemplate">
        Result:
     </label>  
