--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Code Formatter</title>
 </head>
 <body>
-    <label>Where to look for</label>
-    <input id="fileInput" type="file"/>
+    <label for="fileInput">Where to look for</label>
+    <input name="fileInput" id="fileInput" type="file"/>
     <label for="parseTemplate">
         Generic code:
     </label>  
