--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <label for="fileInput">Where to look for</label>
     <input name="fileInput" id="fileInput" type="file"/>
     <label for="parseTemplate">
-        Generic code:
+        Set the vars:
     </label>  
     <textarea id="parseTemplate" name="parseTemplate"></textarea>
-
+    <!-- <label for="transformPattern">
+       How to transform:
+    </label>  
+    <textarea id="transformPattern" name="transformPattern"></textarea> -->
+    <label for="regex">regex</label>
+    <input name="regex" id="regex"/>
     <button class="tfmBtn" onclick="main()">Transform</button>
     <label for="resultTemplate">
        Result:
