[parser]:Added variable substitue in the new code

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
        How to transform:
     </label>  
     <textarea id="transformPattern" name="transformPattern"></textarea> -->
-    <label for="regex">regex</label>
-    <input name="regex" id="regex"/>
+    <label for="change">Change to</label>
+    <textarea name="change" id="change"></textarea>
     <button class="tfmBtn" onclick="main()">Transform</button>
     <label for="resultTemplate">
        Result:
