[index.js]:added download option to file | [index.html]:added download button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         Result:
     </label>
     <textarea id="resultTemplate" name="resultTemplate"></textarea>
+    <button id="downloadBtn">Download</button>
 
 
 </body>
