--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Code Formatter</title>
 </head>
 
@@ -26,6 +26,6 @@
 
 
 </body>
-<script src='/index.js'></script>
+<script src='./index.js'></script>
 
 </html>
